# oofd-kz-telegram

./: .gitignore  pyproject.toml
oofd_kz_telegram/: __main__.py  bot.py  handlers.py  settings.py  states.py
tests/: test_oofd_kz_telegram.py
